--- a/app/src/main/res/layout/primary_destination_item.xml
+++ b/app/src/main/res/layout/primary_destination_item.xml
@@ -16,7 +16,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:background="@drawable/bottom_border"
             android:baselineAligned="false">
 
             <TextView
@@ -25,7 +24,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"
+                android:textColor="@color/irul_icon"
                 android:text="@string/primary" />
 
 
