--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,8 +33,59 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:text="@string/loading"
         android:textAlignment="center"
         android:layout_below="@id/container" />
+
+    <TextView
+        android:id="@+id/deviceName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_below="@id/container" />
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_below="@id/container" />
+
+    <TextView
+        android:id="@+id/noIdentity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_below="@id/name" />
+
+    <TextView
+        android:id="@+id/typeIdentity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_below="@id/noIdentity" />
+
+    <TextView
+        android:id="@+id/role"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="10dp"
+        android:layout_marginTop="30dp"
+        android:textAlignment="center"
+        android:layout_below="@id/typeIdentity" />
+
+    <Button
+        android:id="@+id/btnRegister"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/role"
+        android:text="Register"/>
 
 </RelativeLayout>
