--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -11,13 +11,6 @@
         android:orientation="horizontal"
         android:gravity="center">
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginRight="10dp"
-            android:layout_weight="0"
-            android:src="@drawable/direktorat" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/title1"
@@ -26,16 +19,10 @@
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="20dp"
-            android:text="@string/app_name"
+            android:text="Selamat Datang"
             android:textStyle="bold" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:layout_weight="0"
-            android:src="@drawable/direktorat" />
+
     </LinearLayout>
 
 </LinearLayout>
