--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,9 +32,8 @@
         android:id="@+id/methodTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="10dp"
-        android:textAlignment="center"
-        android:layout_below="@id/container" />
+        android:layout_marginTop="150dp"
+        android:textAlignment="center" />
 
     <TextView
         android:id="@+id/deviceName"
