--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,12 +28,12 @@
         android:layout_height="fill_parent"
         android:scaleX="-1" />
 
-    <TextView
-        android:id="@+id/methodTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="150dp"
-        android:textAlignment="center" />
+<!--    <TextView-->
+<!--        android:id="@+id/methodTitle"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="150dp"-->
+<!--        android:textAlignment="center" />-->
 
     <TextView
         android:id="@+id/deviceName"
@@ -59,13 +59,13 @@
             android:padding="10dp">
 
             <LinearLayout
-                android:layout_marginStart="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
                 android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="50dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:text="Nama"
                     android:textColor="@color/black"
@@ -76,23 +76,14 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:text=":"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/name"
-                    android:layout_width="match_parent"
+                    android:layout_width="170dp"
                     android:layout_height="wrap_content"
                     android:text=" - "
-                    android:textSize="14sp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="10dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                    android:textSize="14sp" />
 
                 <TextView
                     android:layout_width="50dp"
@@ -106,75 +97,105 @@
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:text=":"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/role"
-                    android:layout_width="80dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=" - "
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:layout_width="120dp"
                     android:layout_height="wrap_content"
                     android:text="Jam / Tanggal"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     android:textStyle="bold" />
+
                 <TextView
                     android:layout_width="10dp"
                     android:layout_height="wrap_content"
                     android:text=":"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
                 <TextView
                     android:id="@+id/tgl"
+                    android:layout_width="170dp"
+                    android:layout_height="wrap_content"
+                    android:text=" - "
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="wrap_content"
+                    android:text="Suhu"
+                    android:textColor="@color/black"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:layout_width="10dp"
+                    android:layout_height="wrap_content"
+                    android:text=":"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/methodTitle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text=" - "
-                    android:textSize="14sp"/>
+                    android:textSize="14sp" />
 
             </LinearLayout>
 
-<!--            <LinearLayout-->
-<!--                android:layout_marginTop="30dp"-->
-<!--                android:layout_marginStart="10dp"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:orientation="horizontal">-->
+            <!--            <LinearLayout-->
+            <!--                android:layout_marginTop="30dp"-->
+            <!--                android:layout_marginStart="10dp"-->
+            <!--                android:layout_width="match_parent"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:orientation="horizontal">-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="50sp"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text="Jam"-->
-<!--                    android:textColor="@color/black"-->
-<!--                    android:textSize="12sp"-->
-<!--                    android:textStyle="bold" />-->
+            <!--                <TextView-->
+            <!--                    android:layout_width="50sp"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text="Jam"-->
+            <!--                    android:textColor="@color/black"-->
+            <!--                    android:textSize="12sp"-->
+            <!--                    android:textStyle="bold" />-->
 
-<!--                <TextView-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:text=":"-->
-<!--                    android:textSize="12sp"/>-->
+            <!--                <TextView-->
+            <!--                    android:layout_width="wrap_content"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:text=":"-->
+            <!--                    android:textSize="12sp"/>-->
 
-<!--                <TextView-->
-<!--                    android:id="@+id/role"-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:textSize="12sp"/>-->
+            <!--                <TextView-->
+            <!--                    android:id="@+id/role"-->
+            <!--                    android:layout_width="match_parent"-->
+            <!--                    android:layout_height="wrap_content"-->
+            <!--                    android:textSize="12sp"/>-->
 
-<!--            </LinearLayout>-->
+            <!--            </LinearLayout>-->
 
             <Button
                 android:id="@+id/btnRegister"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/btn_rounded"
                 android:text="Register"
-                android:textSize="15sp"
-                android:textStyle="bold"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
