--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -21,35 +21,24 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-<!--            <LinearLayout-->
-<!--                android:id="@+id/logoWrapper"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="100dp"-->
-<!--                android:gravity="center"-->
-<!--                android:orientation="horizontal"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintHorizontal_bias="0.0"-->
-<!--                app:layout_constraintStart_toStartOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:layout_constraintVertical_bias="0.109">-->
+            <LinearLayout
+                android:id="@+id/logoWrapper"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="40dp"
+                android:orientation="horizontal">
 
-<!--                <ImageView-->
-<!--                    android:layout_width="130dp"-->
-<!--                    android:layout_height="92dp"-->
-<!--                    android:src="@drawable/direktorat" />-->
-                <!--        <ImageView-->
-                <!--            android:layout_width="40dp"-->
-                <!--            android:layout_height="92dp"-->
-                <!--            android:src="@drawable/ic_baseline_clear_24"/>-->
-<!--                <ImageView-->
-<!--                    android:layout_width="130dp"-->
-<!--                    android:layout_height="92dp"-->
-<!--                    android:src="@drawable/kemkes" />-->
+                <ImageView
+                    android:id="@+id/back"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:src="@drawable/ic_baseline_arrow_back_24"
+                    tools:ignore="MissingConstraints" />
 
 
-<!--            </LinearLayout>-->
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/textView"
@@ -57,7 +46,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="50dp"
                 android:layout_marginRight="50dp"
-                android:layout_marginTop="40dp"
                 android:fontFamily="sans-serif-black"
                 android:text="Register"
                 android:textAlignment="center"
